--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ crossorigin = "anonymous" >
         
         <iframe class=" min-w-[100%] md:min-w-[500px] md:w-[500px] h-[500px] m-[10px]" src="https://www.youtube.com/embed/gzCe6W6rk-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
        
-        <button class=" bg-blue-400 text-white rounded p-[10px] hover:bg-blue-700  ">
+        <a href="./Asset/Aman Verma Resume 2023.pdf" download><button class=" bg-blue-400 text-white rounded p-[10px] hover:bg-blue-700  ">
           Download Resume
-        </button>
+        </button></a>
       </div>
       <div id="skills" class="px-[100px] my-[20px] mx-auto ">
         <h1 class="text-center font-bold text-[200%] text-white my-[20px]">Skills</h1>
@@ -141,7 +141,7 @@ crossorigin = "anonymous" >
       <a href="#">
           <h5 class="mb-2 text-md font-bold tracking-tight text-gray-900 dark:text-white">Leads Tracker: Chrome Extension</h5>
       </a>
-      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">HTML | CSS | Local Storage</p>
+      <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">HTML | CSS | Javascript | Local Storage</p>
       <a href="https://leads-tracker-extension-guide.netlify.app/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
           Live 
           <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
